[package]
name = "projectmhz_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
rppal = "0.22.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
http = "1.4.0"
tower-http = { version = "0.6.7", features = ["cors"] }

[[bin]]
name = "webhook"
path = "src/bin/webhook.rs"
